--- a/views/index.ejs
+++ b/views/index.ejs
@@ -330,7 +330,7 @@
       .section3 {
         position: relative;
         z-index: 1;
-        background-image: url('../public/images/basic.jpg');
+        background-image: url('/images/basic.jpg');
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
@@ -438,33 +438,33 @@
     <div id="container">
       <section class="section1" id="section1">
         <video autoplay muted loop playsinline class="background-video">
-          <source src="../public/video/main.mp4" type="video/mp4" />
+          <source src="/video/main.mp4" type="video/mp4" />
         </video>
       </section>
       <section class="section2" id="section2">
         <div class="grid-6x2-merged">
           <div class="grid-item item1">
             <div class="content-box">
-              <img src="../public/images/roder.jpg" alt="사업1+2 이미지" />
+              <img src="/images/roder.jpg" alt="사업1+2 이미지" />
               <span>건설 솔루션</span>
             </div>
           </div>
           <div class="grid-item item3">
             <div class="content-box">
-              <img src="../public/images/roder.jpg" alt="사업3 이미지" />
+              <img src="/images/roder.jpg" alt="사업3 이미지" />
               <span>장비 임대</span>
             </div>
           </div>
           <div class="grid-item item4">
             <div class="content-box">
-              <img src="../public/images/what.png" alt="사업4 이미지" />
+              <img src="/images/what.png" alt="사업4 이미지" />
               <span>정비 서비스</span>
             </div>
           </div>
           <div class="grid-item item5">
             <div class="content-box">
               <video
-                src="../public/video/factory.mp4"
+                src="/video/factory.mp4"
                 autoplay
                 muted
                 loop
@@ -477,7 +477,7 @@
           <div class="grid-item item6">
             <div class="content-box">
               <video
-                src="../public/video/factory.mp4"
+                src="/video/factory.mp4"
                 autoplay
                 muted
                 loop
