--- a/views/index.ejs
+++ b/views/index.ejs
@@ -446,19 +446,19 @@
           <div class="grid-item item1">
             <div class="content-box">
               <img src="/images/roder.jpg" alt="사업1+2 이미지" />
-              <span>건설 솔루션</span>
+              <span>로더</span>
             </div>
           </div>
           <div class="grid-item item3">
             <div class="content-box">
               <img src="/images/roder.jpg" alt="사업3 이미지" />
-              <span>장비 임대</span>
+              <span>굴착기</span>
             </div>
           </div>
           <div class="grid-item item4">
             <div class="content-box">
               <img src="/images/what.png" alt="사업4 이미지" />
-              <span>정비 서비스</span>
+              <span>작업기</span>
             </div>
           </div>
           <div class="grid-item item5">
@@ -470,7 +470,7 @@
                 loop
                 playsinline
               ></video>
-              <span>부품 공급</span>
+              <span>중장비 학원</span>
             </div>
           </div>
 
@@ -483,18 +483,17 @@
                 loop
                 playsinline
               ></video>
-              <span>해외 수출</span>
+              <span>무역</span>
             </div>
           </div>
         </div>
       </section>
       <section class="section3" id="section3">
         <div class="card-container">
-          <div class="card">블록 1</div>
-          <div class="card">블록 2</div>
-          <div class="card">블록 3</div>
-          <div class="card">블록 4</div>
-          <div class="card">블록 5</div>
+          <div class="card">쇼핑몰</div>
+          <div class="card">카카오톡</div>
+          <div class="card">Youtube</div>
+          <div class="card">인스타그램</div>
         </div>
       </section>
       <section class="section4" id="section4">고객센터 & 푸터</section>
